# prometheus

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .codeclimate.yml  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .golangci.yml  .lycheeignore  .mcp.json  .pkgignore  .promu.yml  .promu4travis.yml  .travis.yml  .yamllint  .yamllint.yml  0074-new-labels-values-api.md  11111r.md  :wq  AGENTS.md  AGENT_RESULT.md  AUTHORS  AUTHORS.md  BUILD  CHANGELOG-es.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT-es.md  CODE_OF_CONDUCT.md  COMPONENT_VERSION  CONTRIBUTING-es.md  CONTRIBUTING.md  CONTRIBUTORS.md  (+137 more)
cmd/prometheus/: BUILD.bazel  agent_mode.go  compliance_test.go  config.go  config_test.go  fdlimits_default.go  fdlimits_windows.go  features_test.go  kubecon.yaml  kubecon_compat.yaml  kubecon_demo_test.go  labels.go  labels_stringlabels.go  labels_toplabels.go  labels_toplabels_test.go  limits_default.go  limits_windows.go  main.go  main_bench_test.go  main_test.go  main_unix_test.go  main_update_test.go  main_upgrade_test.go  main_windows_test.go  openapi_e2e_test.go  openapi_test.go  query_log_test.go  reload_test.go  rules_failure_format_test.go  scrape_failure_log_test.go  semconv_test.go  storage_mode.go  thanos_test.go  uname.go  uname_default.go  uname_linux.go  (+5 more)
config/: BUILD.bazel  Makefile  config.go  config.proto  config_default_test.go  config_non_windows_test.go  config_remote_write.go  config_test.go  config_windows_test.go  helpers.go  lexer.l  lexer.l.go  load.go  load_test.go  op_config_test.go  op_remote_write_config.go  parser.y  parser.y.go  pp_config_test.go  pp_remote_write_config.go  printer.go  reload.go  reload_test.go  scrape_http_client_config_test.go  semconv_test.go
discovery/: BUILD.bazel  README.md  discoverer_metrics_noop.go  discovery.go  discovery_test.go  manager.go  manager_test.go  manager_unix_test.go  manager_windows_test.go  metrics.go  metrics_k8s_client.go  metrics_refresh.go  registry.go  resolve.go  resolve_expander.go  resolve_expander_test.go  resolve_test.go  util.go  wrapped.go
notifier/: BUILD.bazel  alert.go  alert_test.go  alertmanager.go  alertmanager_test.go  alertmanagerset.go  alertmanagerset_test.go  buffer.go  buffer_test.go  manager.go  manager_test.go  metric.go  notifier.go  notifier_test.go  queue.go  queue_test.go  sendloop.go  sendloop_test.go  util.go  util_bench_test.go  util_test.go
prompb/: BUILD.bazel  README.md  buf.gen.yaml  buf.yaml  codec.go  codec_test.go  custom.go  custom_test.go  remote.pb.go  remote.proto  remote_compare.pb.go  remote_util.pb.go  remote_vtproto.pb.go  rpc.pb.go  rpc.pb.gw.go  rpc.proto  types.pb.go  types.proto  types_compare.pb.go  types_util.pb.go  types_vtproto.pb.go
promql/: BUILD.bazel  analyzer.go  ast.go  bench.go  bench_test.go  cache_symbols_test.go  delta_functions.go  durations.go  durations_test.go  engine.go  engine_bench_test.go  engine_export.go  engine_extra.go  engine_extra_test.go  engine_internal_test.go  engine_st_test.go  engine_test.go  folding.go  folding_test.go  functions.go  functions_export.go  functions_internal_test.go  functions_test.go  functions_tz.go  functions_tz_windows.go  fuzz.go  fuzz_test.go  generated_parser.y  generated_parser.y.go  go.mod  go.sum  histogram_stats_iterator.go  histogram_stats_iterator_test.go  info.go  info_test.go  lex.go  lex_test.go  notes.go  optimizer.go  optimizer_test.go  (+31 more)
rules/: BUILD.bazel  Makefile  alerting.go  alerting_test.go  group.go  group_test.go  helpers.go  helpers_test.go  lexer.l  lexer.l.go  load.go  loading.go  loading_test.go  manager.go  manager_test.go  model.go  mysql_alert.go  origin.go  origin_test.go  parser.go  parser.y  parser.y.go  recording.go  recording_test.go  rule.go  rules.go  rules_test.go  signoz.go  stale.go  stale_test.go  state.go  store.go  store_test.go  telemetry.go  testdata.go
scrape/: BUILD.bazel  cache.go  clientprotobuf.go  helpers_test.go  manager.go  manager_test.go  metrics.go  namespace_enrichment.go  namespace_enrichment_test.go  rule_appender.go  rule_appender_test.go  rules.go  rules_test.go  scrape.go  scrape_append.go  scrape_append_test.go  scrape_append_v1.go  scrape_append_v1_test.go  scrape_append_v2.go  scrape_append_v2_test.go  scrape_bench_test.go  scrape_test.go  st_synthesis.go  st_synthesis_test.go  target.go  target_scrape_proxy.go  target_scrape_proxy_test.go  target_test.go
storage/: BUILD.bazel  annotating_storage.go  buffer.go  buffer_test.go  call_recorder.go  compatibility.go  compatibility_test.go  errors.go  errors_test.go  exemplar.go  fanout.go  fanout_test.go  generic.go  generic_test.go  infolabels.go  interface.go  interface_append.go  interface_test.go  lazy.go  memoized_iterator.go  memoized_iterator_test.go  merge.go  merge_non_heap.go  merge_test.go  nhcb_querier.go  nhcb_querier_test.go  noop.go  remote_async.go  secondary.go  series.go  series_set.go  series_test.go  storage.go  type_unit_mismatch_storage.go  utf8_migration.go  utf8_migration_test.go
template/: BUILD.bazel  template.go  template_amd64_test.go  template_test.go
tracing/: BUILD.bazel  tracing.go  tracing_test.go
tsdb/: BUILD.bazel  CHANGELOG.md  Makefile.common  README.md  addsymbol.go  addsymbol_stringlabels.go  async_block_writer.go  block.go  block_test.go  blockwriter.go  blockwriter_test.go  checkpoint.go  checkpoint_test.go  client.go  client_test.go  columnar.go  columnar_test.go  compact.go  compact_columnar.go  compact_test.go  db.go  db_append_v2_test.go  db_bench_test.go  db_querier_bench_test.go  db_test.go  example_test.go  exemplar.go  exemplar_test.go  fastrand.go  fastrand_1.22.go  go.mod  go.sum  head.go  head_append.go  head_append_test.go  head_append_v2.go  head_append_v2_test.go  head_bench_test.go  head_chunkpoint.go  head_deadlock_test.go  (+70 more)
web/: .gitignore  BUILD.bazel  Makefile  alerts.go  compression.go  consoles.go  databases.go  federate.go  federate_test.go  handler.go  http3.go  http3_test.go  op_federate.go  status.go  v2.yaml  web.go  web_test.go
(+16988 files in other folders)
