load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/example/project/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alecthomas_units//:units",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common_sigv4//:sigv4",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//model/relabel:go_default_library",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "config_test",
    srcs = [
        "config_default_test.go",
        "config_test.go",
        "config_windows_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":config"],
    deps = [
        "@com_github_alecthomas_units//:units",
        "@com_github_go_kit_log//:log",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/aws:go_default_library",
        "@com_github_prometheus_prometheus//discovery/azure:go_default_library",
        "@com_github_prometheus_prometheus//discovery/consul:go_default_library",
        "@com_github_prometheus_prometheus//discovery/digitalocean:go_default_library",
        "@com_github_prometheus_prometheus//discovery/dns:go_default_library",
        "@com_github_prometheus_prometheus//discovery/eureka:go_default_library",
        "@com_github_prometheus_prometheus//discovery/file:go_default_library",
        "@com_github_prometheus_prometheus//discovery/hetzner:go_default_library",
        "@com_github_prometheus_prometheus//discovery/http:go_default_library",
        "@com_github_prometheus_prometheus//discovery/kubernetes:go_default_library",
        "@com_github_prometheus_prometheus//discovery/linode:go_default_library",
        "@com_github_prometheus_prometheus//discovery/marathon:go_default_library",
        "@com_github_prometheus_prometheus//discovery/moby:go_default_library",
        "@com_github_prometheus_prometheus//discovery/openstack:go_default_library",
        "@com_github_prometheus_prometheus//discovery/puppetdb:go_default_library",
        "@com_github_prometheus_prometheus//discovery/scaleway:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//discovery/triton:go_default_library",
        "@com_github_prometheus_prometheus//discovery/uyuni:go_default_library",
        "@com_github_prometheus_prometheus//discovery/xds:go_default_library",
        "@com_github_prometheus_prometheus//discovery/zookeeper:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//model/relabel:go_default_library",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
