load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "discovery",
    srcs = [
        "discovery.go",
        "manager.go",
        "registry.go",
    ],
    importpath = "github.com/example/project/discovery",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "discovery_test",
    srcs = ["manager_test.go"],
    embed = [":discovery"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//util/testutil:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
