load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "prompb_proto",
    srcs = [
        "remote.proto",
        "types.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:root_proto",
        "//gogoproto:gogoproto_proto",
    ],
)

go_proto_library(
    name = "prompb_go_proto",
    importpath = "github.com/example/project/prompb",
    proto = ":prompb_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//:types.proto",
        "//gogoproto:gogo_proto",
    ],
)

go_library(
    name = "prompb",
    srcs = ["custom.go"],
    embed = [":prompb_go_proto"],
    importpath = "github.com/example/project/prompb",
    visibility = ["//visibility:public"],
)
