load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scrape",
    srcs = [
        "manager.go",
        "scrape.go",
        "target.go",
    ],
    importpath = "github.com/example/project/scrape",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//model/exemplar:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//model/relabel:go_default_library",
        "@com_github_prometheus_prometheus//model/textparse:go_default_library",
        "@com_github_prometheus_prometheus//model/timestamp:go_default_library",
        "@com_github_prometheus_prometheus//model/value:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//util/osutil:go_default_library",
        "@com_github_prometheus_prometheus//util/pool:go_default_library",
    ],
)

go_test(
    name = "scrape_test",
    srcs = [
        "helpers_test.go",
        "manager_test.go",
        "scrape_test.go",
        "target_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":scrape"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//model/exemplar:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//model/relabel:go_default_library",
        "@com_github_prometheus_prometheus//model/textparse:go_default_library",
        "@com_github_prometheus_prometheus//model/timestamp:go_default_library",
        "@com_github_prometheus_prometheus//model/value:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//util/teststorage:go_default_library",
        "@com_github_prometheus_prometheus//util/testutil:go_default_library",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
