load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tsdb",
    srcs = [
        "block.go",
        "blockwriter.go",
        "compact.go",
        "db.go",
        "exemplar.go",
        "head.go",
        "head_append.go",
        "head_read.go",
        "head_wal.go",
        "isolation.go",
        "querier.go",
        "repair.go",
        "tsdbblockutil.go",
        "wal.go",
    ],
    importpath = "github.com/example/project/tsdb",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//model/exemplar:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//model/timestamp:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunkenc:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunks:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/encoding:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/errors:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/fileutil:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/goversion:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/index:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/record:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/tombstones:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/tsdbutil:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/wal:go_default_library",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_atomic//:atomic",
    ],
)

go_test(
    name = "tsdb_test",
    srcs = [
        "block_test.go",
        "blockwriter_test.go",
        "compact_test.go",
        "db_test.go",
        "example_test.go",
        "exemplar_test.go",
        "head_bench_test.go",
        "head_test.go",
        "isolation_test.go",
        "mocks_test.go",
        "querier_bench_test.go",
        "querier_test.go",
        "repair_test.go",
        "wal_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":tsdb"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//model/exemplar:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunkenc:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunks:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/fileutil:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/index:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/record:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/tombstones:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/tsdbutil:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/wal:go_default_library",
        "@com_github_prometheus_prometheus//util/testutil:go_default_library",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_goleak//:goleak",
    ],
)
