load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "web",
    srcs = [
        "federate.go",
        "web.go",
    ],
    importpath = "github.com/example/project/web",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alecthomas_units//:units",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_gogo_protobuf//proto",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_mwitkow_go_conntrack//:go-conntrack",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//expfmt",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//route",
        "@com_github_prometheus_common//server",
        "@com_github_prometheus_exporter_toolkit//web",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//model/timestamp:go_default_library",
        "@com_github_prometheus_prometheus//model/value:go_default_library",
        "@com_github_prometheus_prometheus//notifier:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//promql/parser:go_default_library",
        "@com_github_prometheus_prometheus//rules:go_default_library",
        "@com_github_prometheus_prometheus//scrape:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//template:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_prometheus_prometheus//util/httputil:go_default_library",
        "@com_github_prometheus_prometheus//web/api/v1:go_default_library",
        "@com_github_prometheus_prometheus//web/ui:go_default_library",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@org_golang_x_net//netutil",
        "@org_uber_go_atomic//:atomic",
    ],
)

go_test(
    name = "web_test",
    srcs = [
        "federate_test.go",
        "web_test.go",
    ],
    embed = [":web"],
    deps = [
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//notifier:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//rules:go_default_library",
        "@com_github_prometheus_prometheus//scrape:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_prometheus_prometheus//util/testutil:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
