load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "prometheus_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/cmd/prometheus",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_alecthomas_units//:units",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_mwitkow_go_conntrack//:go-conntrack",
        "@com_github_oklog_run//:run",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//promlog",
        "@com_github_prometheus_common//promlog/flag",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_exporter_toolkit//web",
        "@com_github_prometheus_exporter_toolkit//web/kingpinflag",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/install:go_default_library",
        "@com_github_prometheus_prometheus//discovery/legacymanager:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//model/exemplar:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//model/relabel:go_default_library",
        "@com_github_prometheus_prometheus//notifier:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//rules:go_default_library",
        "@com_github_prometheus_prometheus//scrape:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//storage/remote:go_default_library",
        "@com_github_prometheus_prometheus//tracing:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/agent:go_default_library",
        "@com_github_prometheus_prometheus//util/logging:go_default_library",
        "@com_github_prometheus_prometheus//util/runtime:go_default_library",
        "@com_github_prometheus_prometheus//util/strutil:go_default_library",
        "@com_github_prometheus_prometheus//web:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:kingpin_v2",
        "@io_k8s_klog//:klog",
        "@io_k8s_klog_v2//:klog",
        "@org_uber_go_atomic//:atomic",
    ],
)

go_binary(
    name = "prometheus",
    embed = [":prometheus_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "prometheus_test",
    srcs = [
        "main_test.go",
        "main_unix_test.go",
        "query_log_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":prometheus_lib"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//notifier:go_default_library",
        "@com_github_prometheus_prometheus//rules:go_default_library",
        "@com_github_prometheus_prometheus//util/testutil:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
