load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "promtool_lib",
    srcs = [
        "archive.go",
        "backfill.go",
        "debug.go",
        "main.go",
        "rules.go",
        "sd.go",
        "tsdb.go",
        "unittest.go",
    ],
    importpath = "github.com/example/project/cmd/promtool",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_alecthomas_units//:units",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_google_pprof//profile",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//api",
        "@com_github_prometheus_client_golang//api/prometheus/v1:prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_prometheus_client_golang//prometheus/testutil/promlint",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//expfmt",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_exporter_toolkit//web",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/file:go_default_library",
        "@com_github_prometheus_prometheus//discovery/install:go_default_library",
        "@com_github_prometheus_prometheus//discovery/kubernetes:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//model/rulefmt:go_default_library",
        "@com_github_prometheus_prometheus//model/textparse:go_default_library",
        "@com_github_prometheus_prometheus//model/timestamp:go_default_library",
        "@com_github_prometheus_prometheus//notifier:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//promql/parser:go_default_library",
        "@com_github_prometheus_prometheus//rules:go_default_library",
        "@com_github_prometheus_prometheus//scrape:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunks:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/errors:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/fileutil:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/index:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:kingpin_v2",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_binary(
    name = "promtool",
    embed = [":promtool_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "promtool_test",
    srcs = [
        "backfill_test.go",
        "main_test.go",
        "rules_test.go",
        "sd_test.go",
        "unittest_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":promtool_lib"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//api/prometheus/v1:prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//model/labels:go_default_library",
        "@com_github_prometheus_prometheus//model/relabel:go_default_library",
        "@com_github_prometheus_prometheus//model/rulefmt:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
