load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dns",
    srcs = ["dns.go"],
    importpath = "github.com/example/project/discovery/dns",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_miekg_dns//:dns",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/refresh:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
    ],
)

go_test(
    name = "dns_test",
    srcs = ["dns_test.go"],
    embed = [":dns"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_miekg_dns//:dns",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_uber_go_goleak//:goleak",
    ],
)
